src/snapshots/projection__tests__add_project.snap
---
source: src/main.rs
expression: "cmd.unwrap().arg(\"-d\").arg(&format!(\"{}\", dir . path () . display\n                                    ())).arg(\"add\").arg(\"gh:brettm12345/xmonad-config\").assert()"
---
Assert {
    output: Output {
        status: ExitStatus(
            ExitStatus(
                0,
            ),
        ),
        stdout: "Successfully added brettm12345/xmonad-config to projects\n",
        stderr: "",
    },
}
